{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 46,
  "lineage": "7df3605b-3e8a-a182-0bce-f5e285de2dec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:733026618622:loadbalancer/terraform-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-elb-2117522881.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-elb",
            "idle_timeout": 60,
            "instances": [
              "i-0031ddfef6682e8c3",
              "i-04e80352c9f12c610"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-elb",
            "security_groups": [
              "sg-0fcabc65f8b5d11a5"
            ],
            "source_security_group": "733026618622/terraform-20221125144412956300000001",
            "source_security_group_id": "sg-0fcabc65f8b5d11a5",
            "subnets": [
              "subnet-06065f96e55be23e4",
              "subnet-0b6a7da5f2bc1410f",
              "subnet-0c20ac9870534dfc2"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733026618622:security-group/sg-0fcabc65f8b5d11a5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fcabc65f8b5d11a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "91.177.109.50/32"
                ],
                "description": "port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221125144412956300000001",
            "name_prefix": "terraform-",
            "owner_id": "733026618622",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_80"
            },
            "tags_all": {
              "Name": "allow_80"
            },
            "timeouts": null,
            "vpc_id": "vpc-0483b42696c22cf38"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733026618622:security-group/sg-0470f95f14083dbcd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0470f95f14083dbcd",
            "ingress": [
              {
                "cidr_blocks": [
                  "91.177.109.50/32"
                ],
                "description": "port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "91.177.109.50/32"
                ],
                "description": "port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fcabc65f8b5d11a5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221125144412961000000002",
            "name_prefix": "terraform-",
            "owner_id": "733026618622",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0483b42696c22cf38"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_sg"
          ]
        }
      ]
    }
  ]
}